css fix for miss-aligned selects

--- a/webroot/css/cake.less
+++ b/webroot/css/cake.less
@@ -606,8 +606,10 @@ main {
 	.input.date select + select + select,
 	.input.datetime label + select,
 	.input.datetime select + select ~ select,
-	.input.time select,
-	option {
+	.input.time select {
+		option {
+			text-align: right;
+		}
 		text-align: right;
 		padding-left: 1rem;
 		padding-right: 1rem;
